syntax = "proto3";

package org.price.stream;

option java_package = "org.price.stream";
option java_multiple_files = true;

enum DateRange{
  ALL=0;
  RECENT_MONTH=1;
  ONE_YEAR=2;
  FIVE_YEAR=3;
}

message PriceUpdate {
  string date = 1;
  double open = 2;
  double high = 3;
  double low = 4;
  double close = 5;
  int64 volume = 6;
}

message StockRequest {
  string symbol = 1;
  DateRange date_range=2;
}

service StockFeed {
  rpc StreamPrices(StockRequest) returns (stream PriceUpdate);
}